@@ -20,3 +20,4 @@ inst/doc/oce.R
 .Rproj.user
 .RData
 
+vignettes/.build.timestamp
